using System.Collections;
using System.Collections.Generic;
using System.Security.Permissions;
using UnityEngine;

public class AnimationStrings
{
    public static string AttackCoolDown = "AttackCoolDown";

    public static string HasTarget = "HasTarget";

    public static string CanMove = "CanMove";
    public static string LockVelocity = "LockVelocity";
    public static string IsAlive = "IsAlive";
    public static string IsGrounded = "IsGrounded";
    public static string IsOnWall = "IsOnWall";
    public static string IsOnCeiling = "IsOnCeiling";
    public static string Jump = "Jump";
}
